--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -260,7 +260,7 @@
         <div class="lg:pl-4">
           <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;Highly recommended!&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
-            “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. <span class="bg-yellow">Highly recommended!</span class="bg-yellow">
+            “Joyfully educational” is rare in a tech book but it’s how I would describe D3 + SVG. I love the writing style and spending extra time with the code examples is very helpful for all the new concepts and knowledge I’m gaining. <span class="bg-yellow-light px-1">Highly recommended!</span class="bg-yellow">
           </blockquote>
           <p class="py-4">
             &#8213; <a href="http://keystroke.fun/">Nicholas Gentile</a>, Software Developer, Money.Net
@@ -272,7 +272,7 @@
         <div class="lg:pl-4">
           <h3 class="pt-4 pb-2 text-grey-darkest italic font-semibold text-2xl text-center md:text-left md:pt-0">&quot;You cannot go wrong with it.&quot;</h3>
           <blockquote class="italic text-grey-darker font-light">
-            Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow">You cannot go wrong with it.</span>
+            Ben&#39;s videos and D3 Tips always cover so much in a short space, and this continues with additional depth in the D3 + SVG book. It&#39;s a great guide to get you confidently working with SVG and D3 without getting lost in the abyss. The tone is friendly and very encouraging, with clear examples illustrating some fantastic best practices. <span class="bg-yellow-light px-1">You cannot go wrong with it.</span>
           </blockquote>
           <p class="py-4">
             &#8213; <a href="http://eesur.surge.sh">Sundar Singh</a>, Data Visualisation Developer,  Times Higher Education
@@ -350,7 +350,7 @@
         I'm Ben Clinkinbeard, a developer and instructor with more than 15 years experience. I've been doing data visualization since 2009 and using D3.js since 2011.
       </p>
       <p class="pb-4">
-        In just the past four years, <strong>over 25,000 developers have spent more than 18,000 hours</strong> watching my video lessons. That doesn't happen with educational content that doesn't work.
+        In just the past four years, <span class="font-bold bg-purple-lighter px-1">over 25,000 developers have spent more than 18,000 hours watching my video lessons.</span> That doesn't happen with educational content that doesn't work.
       </p>
       <p class="pb-4">
         Obsessed with clarity, brevity, and information density, you can be assured this material will not waste your time. You'll get the knowledge you need to be successful in the shortest time possible.
