--- a/static/d3svg/index.html
+++ b/static/d3svg/index.html
@@ -35,17 +35,14 @@
   <div class="flex">
     <div class="w-1/6 md:w-1/5 xl:w-1/4"></div>
     <div class="w-5/6 md:w-3/5 xl:w-1/2 font-sans text-lg text-grey-darkest leading-normal">
-      <h1 class="text-center py-8">Create stunning charts for every screen</h1>
+      <h1 class="text-center py-8 text-5xl">Relying on 3rd party charts is risky</h1>
 
       <div class="mx-auto text-center">
         <img src="cover.jpg" alt="Book cover" class="w-1/2">
       </div>
 
       <!-- PAIN -->
-      <h2 class="pt-8 pb-1 text-3xl">
-        Relying on 3rd party charts leaves you vulnerable
-      </h2>
-      <p class="pb-4">
+      <p class="pb-4 pt-8">
         3rd party chart libraries can make for a great demo, but getting them to production is a different story.
       </p>
       <p class="pb-4">
